RESOLVED FIXED308995
[AutoFill Debugging] Links that contain images are missing when extracting as markdown
https://bugs.webkit.org/show_bug.cgi?id=308995
Summary [AutoFill Debugging] Links that contain images are missing when extracting as...
Wenson Hsieh
Reported 2026-03-02 11:06:52 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-02 11:57:59 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2026-03-02 12:46:44 PST
Wenson Hsieh
Comment 3 2026-03-02 12:49:24 PST
EWS
Comment 4 2026-03-02 13:48:29 PST
Committed 308481@main (022ec8d88fa7): <https://commits.webkit.org/308481@main> Reviewed commits have been landed. Closing PR #59735 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.