[AutoFill Debugging] Links that contain images are missing when extracting as markdown https://bugs.webkit.org/show_bug.cgi?id=308995 rdar://171550410

Reviewed by Aditya Keerthi and Megan Gardner.

When extracting text using the markdown output format, image elements inside links are represented
as just the image itself, effectively losing the link URL. There isn't a great way to express this
kind of nesting in markdown, so in order to preserve both pieces of information, just fall back to
puting the link next to the image in the output text.

* LayoutTests/fast/text-extraction/debug-text-extraction-markdown-expected.txt:
* LayoutTests/fast/text-extraction/debug-text-extraction-markdown.html:
* Source/WebKit/Shared/TextExtractionToStringConversion.cpp:
(WebKit::addPartsForItem):

Canonical link: https://commits.webkit.org/308481@main